--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,10 +46,10 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+    --primary-glow: radial-gradient(rgba(195, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
       to bottom right,
-      rgba(1, 65, 255, 0),
+      rgba(100, 65, 255, 0),
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0.3)
     );
@@ -81,8 +81,12 @@
 
 html,
 body {
+  padding: 0;
+  ;
   max-width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+  
 }
 
 body {
